fix: blurry text rendering in popup dialogs

--- a/src/app/shared/components/dialog/dialog.component.scss
+++ b/src/app/shared/components/dialog/dialog.component.scss
@@ -3,6 +3,9 @@
 @import "../../../shared/styles/app/utils-definitions";
 
 .overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
   z-index: $zindex-app-dialog;
   width: 100%;
@@ -18,9 +21,6 @@
   background-color: $modal-content-bg;
   width: 50%;
   max-width: 50%;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
   cursor: default;
 }
 
