--- a/src/app/shared/styles/app/variables.scss
+++ b/src/app/shared/styles/app/variables.scss
@@ -67,7 +67,7 @@ $brand-yellow-dark:            darken($brand-yellow, $amountOfLight);
 //** Background color for `<body>`.
 $body-bg:               #f5f7fa;
 //** Global text color on `<body>`.
-$text-color:            #515253;
+$text-color:            #1f1f1f;
 
 //** Global textual link color.
 $link-color:            $brand-primary;
@@ -81,7 +81,8 @@ $link-hover-decoration: underline;
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+// $font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-sans-serif:  "Fira Sans Extra Condensed", sans-serif !default;
 $font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
